# aetheris

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/core/: __init__.py  config.py  database.py  logging.py  middleware.py  readiness.py  registry.py  responses.py  security.py
app/core/embeddings/: service.py
app/core/qdrant/: service.py
app/modules/: __init__.py
app/workers/: celery_app.py  ingestion.py  tasks.py
docker/: nginx.conf
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_DESIGN.md  ENGINEERING_GUIDE.md  OPERATIONS.md  ROADMAP.md  SECURITY.md
docs/adr/: 001-modular-monolith.md  002-qdrant-choice.md  003-redis-celery-architecture.md
docs/postman/: README.md  aetheris-auth-tenancy.postman_collection.json  aetheris-documents.postman_collection.json  aetheris-ingestion.postman_collection.json  aetheris-local.postman_environment.json
migrations/: env.py
migrations/versions/: 0001_initial_foundation.py  0002_create_users.py  0003_create_refresh_sessions.py  0004_create_orgs_memberships.py  0005_create_api_keys.py  0006_create_doc_and_job_proc.py  0007_create_document_chunks.py
scripts/: check.py  check_ci.py
tests/: conftest.py  test_api_keys_service.py  test_auth_security.py  test_auth_tokens.py  test_documents_service.py  test_health.py  test_organizations_service.py  test_processing_chunker.py  test_processing_extractor.py  test_settings.py  test_tenant_context.py
(+28 files in other folders)
