[project]
name = "aetheris"
version = "0.1.0"
description = "Headless backend for document ingestion, semantic retrieval, and RAG."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.111.0",
    "minio>=7.2.20",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.2.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pyright>=1.1.370",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
package = false
